# src/main/java/com/konsol/core/web/rest/api/StoreItemResource.java
@@ -1,0 +1,180 @@
+package com.konsol.core.web.rest.api;
+
+import com.konsol.core.repository.StoreItemRepository;
+import com.konsol.core.service.StoreItemService;
+import com.konsol.core.service.dto.StoreItemDTO;
+import com.konsol.core.web.rest.errors.BadRequestAlertException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
+import javax.validation.Valid;
+import javax.validation.constraints.NotNull;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
+import tech.jhipster.web.util.HeaderUtil;
+import tech.jhipster.web.util.PaginationUtil;
+import tech.jhipster.web.util.ResponseUtil;
+
+/**
+ * REST controller for managing {@link com.konsol.core.domain.StoreItem}.
+ */
+@RestController
+@RequestMapping("/api")
+public class StoreItemResource {
+
+    private final Logger log = LoggerFactory.getLogger(StoreItemResource.class);
+
+    private static final String ENTITY_NAME = "storeItem";
+
+    @Value("${jhipster.clientApp.name}")
+    private String applicationName;
+
+    private final StoreItemService storeItemService;
+
+    private final StoreItemRepository storeItemRepository;
+
+    public StoreItemResource(StoreItemService storeItemService, StoreItemRepository storeItemRepository) {
+        this.storeItemService = storeItemService;
+        this.storeItemRepository = storeItemRepository;
+    }
+
+    /**
+     * {@code POST  /store-items} : Create a new storeItem.
+     *
+     * @param storeItemDTO the storeItemDTO to create.
+     * @return the {@link ResponseEntity} with status {@code 201 (Created)} and with body the new storeItemDTO, or with status {@code 400 (Bad Request)} if the storeItem has already an ID.
+     * @throws URISyntaxException if the Location URI syntax is incorrect.
+     */
+    @PostMapping("/store-items")
+    public ResponseEntity<StoreItemDTO> createStoreItem(@Valid @RequestBody StoreItemDTO storeItemDTO) throws URISyntaxException {
+        log.debug("REST request to save StoreItem : {}", storeItemDTO);
+        if (storeItemDTO.getId() != null) {
+            throw new BadRequestAlertException("A new storeItem cannot already have an ID", ENTITY_NAME, "idexists");
+        }
+        StoreItemDTO result = storeItemService.save(storeItemDTO);
+        return ResponseEntity
+            .created(new URI("/api/store-items/" + result.getId()))
+            .headers(HeaderUtil.createEntityCreationAlert(applicationName, true, ENTITY_NAME, result.getId()))
+            .body(result);
+    }
+
+    /**
+     * {@code PUT  /store-items/:id} : Updates an existing storeItem.
+     *
+     * @param id the id of the storeItemDTO to save.
+     * @param storeItemDTO the storeItemDTO to update.
+     * @return the {@link ResponseEntity} with status {@code 200 (OK)} and with body the updated storeItemDTO,
+     * or with status {@code 400 (Bad Request)} if the storeItemDTO is not valid,
+     * or with status {@code 500 (Internal Server Error)} if the storeItemDTO couldn't be updated.
+     * @throws URISyntaxException if the Location URI syntax is incorrect.
+     */
+    @PutMapping("/store-items/{id}")
+    public ResponseEntity<StoreItemDTO> updateStoreItem(
+        @PathVariable(value = "id", required = false) final String id,
+        @Valid @RequestBody StoreItemDTO storeItemDTO
+    ) throws URISyntaxException {
+        log.debug("REST request to update StoreItem : {}, {}", id, storeItemDTO);
+        if (storeItemDTO.getId() == null) {
+            throw new BadRequestAlertException("Invalid id", ENTITY_NAME, "idnull");
+        }
+        if (!Objects.equals(id, storeItemDTO.getId())) {
+            throw new BadRequestAlertException("Invalid ID", ENTITY_NAME, "idinvalid");
+        }
+
+        if (!storeItemRepository.existsById(id)) {
+            throw new BadRequestAlertException("Entity not found", ENTITY_NAME, "idnotfound");
+        }
+
+        StoreItemDTO result = storeItemService.update(storeItemDTO);
+        return ResponseEntity
+            .ok()
+            .headers(HeaderUtil.createEntityUpdateAlert(applicationName, true, ENTITY_NAME, storeItemDTO.getId()))
+            .body(result);
+    }
+
+    /**
+     * {@code PATCH  /store-items/:id} : Partial updates given fields of an existing storeItem, field will ignore if it is null
+     *
+     * @param id the id of the storeItemDTO to save.
+     * @param storeItemDTO the storeItemDTO to update.
+     * @return the {@link ResponseEntity} with status {@code 200 (OK)} and with body the updated storeItemDTO,
+     * or with status {@code 400 (Bad Request)} if the storeItemDTO is not valid,
+     * or with status {@code 404 (Not Found)} if the storeItemDTO is not found,
+     * or with status {@code 500 (Internal Server Error)} if the storeItemDTO couldn't be updated.
+     * @throws URISyntaxException if the Location URI syntax is incorrect.
+     */
+    @PatchMapping(value = "/store-items/{id}", consumes = { "application/json", "application/merge-patch+json" })
+    public ResponseEntity<StoreItemDTO> partialUpdateStoreItem(
+        @PathVariable(value = "id", required = false) final String id,
+        @NotNull @RequestBody StoreItemDTO storeItemDTO
+    ) throws URISyntaxException {
+        log.debug("REST request to partial update StoreItem partially : {}, {}", id, storeItemDTO);
+        if (storeItemDTO.getId() == null) {
+            throw new BadRequestAlertException("Invalid id", ENTITY_NAME, "idnull");
+        }
+        if (!Objects.equals(id, storeItemDTO.getId())) {
+            throw new BadRequestAlertException("Invalid ID", ENTITY_NAME, "idinvalid");
+        }
+
+        if (!storeItemRepository.existsById(id)) {
+            throw new BadRequestAlertException("Entity not found", ENTITY_NAME, "idnotfound");
+        }
+
+        Optional<StoreItemDTO> result = storeItemService.partialUpdate(storeItemDTO);
+
+        return ResponseUtil.wrapOrNotFound(
+            result,
+            HeaderUtil.createEntityUpdateAlert(applicationName, true, ENTITY_NAME, storeItemDTO.getId())
+        );
+    }
+
+    /**
+     * {@code GET  /store-items} : get all the storeItems.
+     *
+     * @param pageable the pagination information.
+     * @return the {@link ResponseEntity} with status {@code 200 (OK)} and the list of storeItems in body.
+     */
+    @GetMapping("/store-items")
+    public ResponseEntity<List<StoreItemDTO>> getAllStoreItems(@org.springdoc.api.annotations.ParameterObject Pageable pageable) {
+        log.debug("REST request to get a page of StoreItems");
+        Page<StoreItemDTO> page = storeItemService.findAll(pageable);
+        HttpHeaders headers = PaginationUtil.generatePaginationHttpHeaders(ServletUriComponentsBuilder.fromCurrentRequest(), page);
+        return ResponseEntity.ok().headers(headers).body(page.getContent());
+    }
+
+    /**
+     * {@code GET  /store-items/:id} : get the "id" storeItem.
+     *
+     * @param id the id of the storeItemDTO to retrieve.
+     * @return the {@link ResponseEntity} with status {@code 200 (OK)} and with body the storeItemDTO, or with status {@code 404 (Not Found)}.
+     */
+    @GetMapping("/store-items/{id}")
+    public ResponseEntity<StoreItemDTO> getStoreItem(@PathVariable String id) {
+        log.debug("REST request to get StoreItem : {}", id);
+        Optional<StoreItemDTO> storeItemDTO = storeItemService.findOne(id);
+        return ResponseUtil.wrapOrNotFound(storeItemDTO);
+    }
+
+    /**
+     * {@code DELETE  /store-items/:id} : delete the "id" storeItem.
+     *
+     * @param id the id of the storeItemDTO to delete.
+     * @return the {@link ResponseEntity} with status {@code 204 (NO_CONTENT)}.
+     */
+    @DeleteMapping("/store-items/{id}")
+    public ResponseEntity<Void> deleteStoreItem(@PathVariable String id) {
+        log.debug("REST request to delete StoreItem : {}", id);
+        storeItemService.delete(id);
+        return ResponseEntity.noContent().headers(HeaderUtil.createEntityDeletionAlert(applicationName, true, ENTITY_NAME, id)).build();
+    }
+}
